feat : add updateUserAvatar controller and update swagger
