# backend/src/routes/users.routes.ts
@@ -2,8 +2,12 @@ import { Router } from "express";
 
 import verifyToken from "../middleware/auth.middleware";
 
+import upload from "../middleware/multer.middleware";
+
 import {
   getCurrentUser,
+
+  updateUserAvatar,
 
   getUserById,
   updateUser,
@@ -11,9 +15,17 @@ import {
 } from "../controllers/user.controller";
 
 
+
 const router = Router();
 
 router.get("/current-user", verifyToken, getCurrentUser);
+
+router.patch(
+  "/updateUserAvatar",
+  verifyToken,
+  upload.single('avatar'),
+  updateUserAvatar
+)
 
 router
   .route('/:id')
